[workspace]
members = ["crates/*"]

[workspace.package]
authors = ["Romain TRUCHI"]
edition = "2021"

[workspace.dependencies]

[profile.dev]
# Remove debug stuff in the binary
debug = false
strip = true

# Trying to improve dev performance, but I don't see any effects...
[profile.dev.package."*"]
debug = false
strip = true
opt-level = 3
debug-assertions = false
overflow-checks = false
codegen-units = 16
