[package]
name = "leetcode"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[[bin]]
name = "roman_to_integer"
path = "src/roman_to_integer/main.rs"

[[bin]]
name = "palindrome_linked_list"
path = "src/palindrome_linked_list/main.rs"

[[bin]]
name = "palindrome_number"
path = "src/palindrome_number/main.rs"

[dependencies]
